# undef-terminal

./: .gitignore  .pre-commit-config.yaml  .pymutant-quarantine.json  .secrets.baseline  CHANGELOG.md  MANIFEST.in  MUTATION_PATTERNS.md  NEW_CHAT_CHECKLIST.md  README.md  biome.json  conftest.py  package-lock.json  package.json  pyproject.toml  quizzical-dreaming-hearth.md  tsconfig.frontend.json  undef-bf.txt  undef-cf-bf.txt  undef_terminal_dashboard_redesign.html  undef_terminal_file_tree_and_data_flow.html  undef_terminal_operator_console_redesign.html  undef_terminal_quickconnect_redesign.html  undef_terminal_replay_redesign.html  unified-conjuring-snail.md
.ci/: max-loc-baseline.json
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-cf.yml  release-governance.yml  release.yml
.provide/: HANDOFF.md  MEMRAY_ANALYSIS.md
.reuse/: dep5
.tmp-playwright-videos/: proof-director-cut-reel.json
.tmp-proof-reel/: concat.txt
.tmp-ssh-keys/: ssh_host_key
.tmp-ssh-keys2/: ssh_host_key
.uterm-recordings/: demo-session.jsonl  scratch.jsonl
.uterm-recordings-proof/: demo-session.jsonl
artifacts/soak/: README.md  local-failure-injection-20260305-115436.txt  local-latency-probe-20260305-122728.txt  local-load-profile-20260305-113438.txt
benchmarks/: backend-comparison.json
demo/: run_demo.py  sse_viewer.html  terminal.html
docker/: Dockerfile.cf  Dockerfile.server  docker-compose.yml  server.toml
docs/: TESTING.md  ard-command-approval-workflows.md  ard-multi-session-fanout.md  ard-presence-collaboration-layer.md  ard-realtime-anomaly-detection.md  ard-session-audit-compliance-recording.md  cf-do-architecture.md  inspect.md  production-readiness-pass2.md  proposal-ws-session-resumption.md  protocol-matrix.md  release-governance.md
docs/diagrams/: frontend-components.puml  pty-architecture.puml  render-architecture.puml  shell-architecture.puml  system-overview.puml  tunnel-inspect.puml
docs/operations/: process-tree-hijack-typing-note.md  runbook.md  slo.md
frontend/: terminal.html  terminal.js
reports/: undef-terminal-commodity-vs-custom.md  undef-terminal-competitive-matrix.md  undef-terminal-market-landscape.md
scripts/: __init__.py  _dyld_repl.py  _example_session.py  benchmark_backends.py  capture_demo_server.py  capture_e2e_proof.py  capture_rc_baseline.sh  check_docs_accuracy.py  check_event_literals.py  check_licenses.py  check_max_loc.py  check_spdx_headers.py  colima_install_uterm.sh  colima_smoke_test.py  deckmux_demo_server.py  demo_server.py  dyld_demo_server.py  example_server.py  failure_injection.py  latency_probe.py  load_profile.py  memray_ansi_stress.py  memray_gateway_stress.py  memray_hub_stress.py  normalize_spdx_headers.py  release_governance_check.sh  rollback_drill.py  run_memray_stress.py  run_mutation_gate.py  run_performance_smoke.py  run_pytest_gate.py  spdx_headers.py  undefterm-server.example.toml  undefterm-server.jwt.example.toml  uterm-server.example.toml  uterm-server.jwt.example.toml  verify_package_artifacts.py  walkthrough.py  ws_delivery_probe.py
src/undef/: __init__.py  bf-20260306-192305.txt  shell  terminal
test-results/tests-test-zzz-playwright-demo-py-testdemopagesinglebrowser-test-command-flow-from-page-controls-chromium/: video.webm
test-results/tests-test-zzz-playwright-demo-py-testdemopagesinglebrowser-test-hijacked-input-updates-demo-state-and-analysis-chromium/: video.webm
test-results/tests-test-zzz-playwright-demo-py-testdemopagetwobrowsers-test-two-browser-handoff-in-exclusive-mode-chromium/: video.webm
test-results/tests-test-zzz-playwright-demo-py-testdemopagetwobrowsers-test-two-browsers-can-type-in-shared-mode-chromium/: video.webm
test-results/tests-test-zzz-playwright-server-py-testreferenceserverpages-test-operator-page-can-switch-modes-hijack-and-open-replay-chromium/: video.webm
test-results/tests-test-zzz-playwright-terminal-proxy-py-testterminalproxypage-test-terminal-page-round-trips-browser-input-through-ws-and-telnet-chromium/: video.webm
test-results/tests-test-zzz-playwright-terminal-proxy-py-testterminalproxypage-test-terminal-reconnects-after-socket-close-chromium/: video.webm
test-results/tests-test-zzz-playwright-terminal-proxy-py-testterminalproxypage-test-terminal-settings-are-applied-and-persist-across-reload-chromium/: video.webm
tests/: conftest.py  test_ansi_upgrade.py  test_bridge_reconnect.py  test_browser_roles.py  test_chaos_transport.py  test_cli.py  test_cli_listen_mutants.py  test_cli_mutants.py  test_coverage_bridge.py  test_coverage_browser_handlers.py  test_coverage_gaps2.py  test_coverage_gaps_bridge.py  test_coverage_gaps_routes.py  test_coverage_gaps_runtime.py  test_coverage_gaps_simple.py  test_coverage_hub_routes.py  test_coverage_hub_routes_p2.py  test_coverage_ws_routes.py  test_demo_server.py  test_demo_server_e2e.py  test_e2e_live_hub_ws.py  test_e2e_ssh_gateway.py  test_e2e_telnet_gateway.py  test_emulator.py  test_example_server.py  test_fastapi_ws.py  test_file_io.py  test_frontend_static_assets.py  test_gateway.py  test_hijack_acquire_atomic.py  test_hijack_base.py  test_hijack_bridge.py  test_hijack_bridge_loops.py  test_hijack_hub.py  test_hijack_hub_atomic.py  test_hijack_routes.py  test_hijack_routes_advanced.py  test_hijack_routes_regression.py  test_hijack_shared.py  test_hijack_ws.py  (+41 more)
tests/ansi/: test_ansi.py  test_ansi_upgrade.py  test_ansi_upgrade_2.py
tests/cli/: test_cli.py  test_cli_validation.py
tests/client/: test_client_mutants.py  test_control_ws_client.py  test_control_ws_coverage.py  test_hijack_client.py  test_hijack_client_2.py  test_mcp_tools.py
tests/detection/: test_buffer.py  test_detector.py  test_engine.py  test_extractor.py  test_integration.py  test_loader.py  test_models.py  test_rules.py  test_saver.py
tests/e2e/: conftest.py  test_live_hub_advanced.py  (+8 more)
tests_mutation/: conftest.py  test_cli_parser_mutants.py  test_cli_proxy_mutants.py  test_cli_run_listen_mutants.py  test_gateway_mutants.py  test_misc_fastapi_mutants.py  test_misc_mutants.py  test_transports_mutants.py
(+441 files in other folders)
