#
# SPDX-FileCopyrightText: Copyright (c) 2025-2026 MindTenet LLC. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-or-later
#

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "undef-terminal"
version = "0.4.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["packages/undef-terminal/src"]

[dependency-groups]
dev = [
    "asyncssh>=2.22.0",
    "bandit>=1.9",
    "codespell>=2.4.1",
    "detect-secrets>=1.5.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "hypothesis>=6.151.9",
    "memray>=1.0; sys_platform != 'win32'",
    "mutmut>=3.3.1",
    "mypy>=1.19",
    "pip-audit>=2.7.0",
    "pip-licenses>=5.5.0",
    "pre-commit>=4.0",
    "pydantic>=2.0",
    "pyjwt>=2.9",
    "pyte>=0.8.2",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "pytest-playwright>=0.7.2",
    "pytest-randomly>=3.15.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8",
    "reuse>=6.2.0",
    "ruff>=0.15",
    "ty>=0.0.17",
    "uv>=0.10.7",
    "uvicorn>=0.24",
    "vulture>=2.14",
    "websockets>=16.0",
    "pyyaml>=6.0",
    "xenon>=0.9.3",
    "fastmcp>=2.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "packages/undef-terminal-cloudflare/python_modules",
]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "PTH",
    "DTZ", "ICN", "ISC", "PERF", "PIE", "RET", "RSE", "TID", "S", "ARG", "RUF",
]
ignore = ["E501", "S104", "S112", "S311"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "RUF022"]
"tests_mutation/**/*.py" = ["E402", "B905", "S101", "S105", "S106", "S110", "ARG", "TCH", "RUF003", "RUF012", "RUF015", "RUF043", "RUF059"]
"packages/**/tests/**/*.py" = ["E402", "B905", "S101", "S105", "S106", "S110", "S603", "S607", "ARG", "TCH", "RUF003", "RUF012", "RUF015", "RUF043", "RUF059"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
namespace_packages = true
explicit_package_bases = true
mypy_path = ["packages/undef-terminal/src", "packages/undef-shell/src"]

[[tool.mypy.overrides]]
module = ["undef.telemetry", "undef.telemetry.*", "structlog", "structlog.*"]
ignore_missing_imports = true


[[tool.mypy.overrides]]
# ty 0.0.19 has a cross-file resolution bug: it can't see methods added to HijackClient
# and SessionRegistry from call sites in other modules. Ignores are unused from mypy's
# perspective — suppress the warn_unused_ignores noise.
module = [
    "undef.terminal.mcp.server",
    "undef.terminal.server.routes.api",
]
warn_unused_ignores = false

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["packages/undef-shell/src"]

[tool.ty.rules]
invalid-argument-type = "ignore"
unused-type-ignore-comment = "ignore"

[tool.codespell]
skip = ".git,*.pyc,__pycache__,.venv,node_modules,uv.lock,*.mmd,packages/undef-terminal/src/undef/terminal/frontend/assets/*.js,packages/undef-terminal-cloudflare/python_modules/undef/terminal/frontend/assets/*.js,packages/undef-terminal-cloudflare/python_modules/structlog/*,mutants"
ignore-words-list = "ore,opps,wont,strat,nd,rade,ans"

[tool.bandit]
exclude_dirs = [
    "packages/undef-terminal/tests",
    "packages/undef-terminal-cloudflare/python_modules",
    "packages/undef-terminal-cloudflare/node_modules",
    "packages/undef-shell/tests",
]

[tool.vulture]
min_confidence = 80
paths = ["packages/undef-terminal/src", "packages/undef-terminal/tests", "packages/undef-shell/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.xenon]
max_absolute = "C"
max_modules = "B"
max_average = "A"

[tool.mutmut]
paths_to_mutate = ["src/undef/shell/terminal/_connector.py", "src/undef/terminal/server/connectors/__init__.py", "src/undef/terminal/server/connectors/registry.py", "src/undef/terminal/hijack/hub/event_bus.py"]
tests_dir = [
    "packages/undef-terminal/tests/shell/test_shell_connector.py",
    "packages/undef-terminal/tests/server/test_app_ushell.py",
    "packages/undef-terminal/tests/server/test_connectors_websocket.py",
    "packages/undef-terminal/tests/server/test_connectors.py",
    "packages/undef-terminal/tests/hijack/test_event_bus.py",
    "packages/undef-terminal/tests/hijack/test_event_bus_integration.py",
]
also_copy = [
    "src",
    "packages/undef-shell/src",
    "packages/undef-terminal/src",
    "packages/undef-terminal/tests",
    "packages/undef-shell/tests",
    "conftest.py",
]
pytest_add_cli_args = ["--timeout=30", "-p", "no:randomly", "-p", "no:hypothesis"]
debug = true
